--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,4 +13,10 @@ trainapp {
         //24 hours in millis (24 * 60 * 60 * 1000)
         sessionLifetime = 86400000
     }
+    
+    cors {
+        allowOrigin = ["http://localhost:8000"]
+        //cache pre-flight response for 20 days
+        controlMaxAge = 1728000
+    }
 }
