--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,7 +15,7 @@ trainapp {
     }
     
     cors {
-        allowOrigin = ["http://localhost:8000"]
+        allowOrigin = "http://localhost:8000"
         //cache pre-flight response for 20 days
         controlMaxAge = 1728000
     }
